--- a/estilos.css
+++ b/estilos.css
@@ -45,3 +45,34 @@ a{
     text-align: right;
     justify-content: flex-start;
 }
+.slider{
+    width: 100%;
+    height: 600 px;
+    overflow: hidden;
+}
+
+.slider ul{
+    display: flex;
+    animation: cambio 20s infinite alternate linear;
+    width:400%;
+}
+
+.slider li{
+    width: 100%;
+    list-style: none;
+}
+
+.slider img{
+    width: 100%;
+    height: 100%;
+}
+@keyframes cambio {
+    0%{margin-left: 0;}
+    30%{margin-left: 0;}
+
+    35%{margin-left: -145%;}
+    70%{margin-left: -145%;}
+
+    75%{margin-left: -270%;}
+    100%{margin-left: -270%;}
+}
