--- a/estilos_login.css
+++ b/estilos_login.css
@@ -1,4 +1,14 @@
 /*LOGIN*/
+.header {
+    position: relative; /* Establecer posición relativa para que el botón se posicione en relación con este contenedor */
+}
+
+.btn-primary {
+    position: absolute;
+    top: 30px; 
+    right: 30px; 
+}
+
 *{
     padding: 0;
     margin: 0;
